# Sift

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: run-tauri.mjs
src/: App.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  services.rs
src/components/: SettingsPanel.tsx
src/lib/: api.ts  app-utils.test.ts  app-utils.ts  defaults.ts  format.test.ts  format.ts  types.ts
